add us 10, us 11 and us 12